<resources>

    <string name="facebook_app_id_test">244014339436197</string>
    <string name="fb_login_protocol_scheme">fb244014339436197</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="app_name">TimePieceApp</string>
    <string name="action_settings">Settings</string>
    <string name="detail_description">DESCRIPTION</string>
    <string name="detail_info">General Information</string>
    <string name="detail_shopping">Add to the bag</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="email_invalid">This email is invalid.</string>
    <string name="forgot_password"><u>Forgot your password?</u></string>
    <string name="login">Log In</string>
    <string name="login_fb">LOG IN WITH <b>FACEBOOK</b></string>
    <string name="login_sing_up"><u>Sing Up</u></string>
    <string name="logo">TimePiece Logo</string>
    <string name="login_msg">Buy and sell generating social awareness</string>
    <string name="main_products">PRODUCTS</string>
    <string name="main_services">SERVICES</string>
    <string name="main_donations">DONATIONS</string>
    <string name="main_announces">%1$d announces</string>
    <string name="name_complete">Name Complete</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_fb">SIGN UP WITH <b>FACEBOOK</b></string>
    <string name="shopping_pay">TO PAY</string>
    <string name="password">Password</string>
    <string name="password_reset_msg">Enter your email address, and we will send you an email to recover your password.</string>
    <string name="profile_announces">ANNOUNCES</string>
    <string name="profile_total">TOTAL</string>
    <string name="profile_purchases">PURCHASES</string>
    <string name="title_donations">Donations</string>
    <string name="title_home">Home</string>
    <string name="title_join">Join Up</string>
    <string name="title_log_out">Log Out</string>
    <string name="title_profile">Profile</string>
    <string name="title_publications">Publications</string>
    <string name="title_sales">Sales</string>
    <string name="title_shopping">Shopping</string>
    <string name="title_activity_tour">TourActivity</string>
    <string name="tour_title_01">JOIN TO TIMEPIECE</string>
    <string name="tour_title_02">DONATES</string>
    <string name="tour_title_03">OFFERS AND WIN</string>
    <string name="tour_title_04">GROWS DAY TO DAY</string>
    <string name="tour_msg_01">Make the difference, be part of a unique social experience in its style.</string>
    <string name="tour_msg_02">Helps to the community with your donations.</string>
    <string name="tour_msg_03">Offers your products and/or services in the store.</string>
    <string name="tour_msg_04">Improves your ranking and meet interesting people.</string>
    <string name="submit">Submit</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="skip">Skip</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shopping_delete">Delete</string>
    <string name="title_activity_publication_fragment">PublicationFragment</string>
    <string name="title_activity_purchases_fragment">PurchasesFragment</string>
    <string name="purchases_process">In process</string>
    <string name="purchases_finished">Finished</string>
    <string name="donations_received">Received</string>
    <string name="donations_done">Done</string>
    <string name="title_activity_sales_fragment">SalesFragment</string>
    <string name="title_activity_my_donations_fragment">MyDonationsFragment</string>
    <string name="cancel">Cancel</string>
    <string name="finalize">Finalize</string>
    <string name="price_and_acquisitions">%1$s,  %2$s Acquisitions</string>
    <string name="payment_date">Payment Date: %1$s</string>
    <string name="total_paid">"$ %1$s Paid "</string>
    <string name="acquisitions">%1$s Acquisitions</string>
    <string name="seller_name">Seller: %1$s</string>
    <string name="price_and_sales">%1$s, %2$s Sales</string>
    <string name="buyer_name">Buyer: %1$s</string>
    <string name="sales">%1$s Sales</string>
    <string name="finish_date">Finish Date: %1$s</string>
    <string name="create_question">I want to create:</string>
    <string name="create_price">Price</string>
    <string name="create_unit">Unit</string>
    <string name="create_address">Address</string>
    <string name="create_title">Title</string>
    <string name="create_description">Description</string>
    <string name="camera">CAMERA</string>
    <string name="gallery">GALLERY</string>
    <string name="upload">Upload from:</string>
    <string name="cause"><u>Cause:</u></string>
    <string name="donation_raise">To raise: $</string>
    <string name="donation_required">Required</string>
    <string name="donation_collected">Collected</string>
    <string name="amount_to_donate">Amount to Donate</string>
    <string name="donation_item_received">%1$s Received</string>
    <string name="donation_item_required">%1$s Required</string>
    <string name="donation_item_donated">%1$s Donated</string>
    <string name="reception_date">Reception Date: %1$s</string>
    <string name="donation_date">Donation Date: %1$s</string>
    <string name="donor_name">Donor: %1$s</string>
    <string name="beneficiary_name">Beneficiary: %1$s</string>
    <string name="creation_date">Creation Date: %1$s</string>
    <string name="modification_date">Modification Date: %1$s</string>
    <string name="collected_required">%1$s Collected, %2$s Required</string>
    <string name="donation_edit_collected">Collected: %1$s</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="credit_card">CREDIT CARD</string>
    <string name="credit_card_name">Name in the Credit Card</string>
    <string name="credit_card_number">Credit Card Number</string>
    <string name="credit_card_expiration">Expiration Date</string>
    <string name="credit_card_cvv">CVV</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="postal_code">Postal Code</string>
    <string name="country">Country</string>
    <string name="cardholder_address">CARDHOLDER\'S ADDRESS</string>
    <string name="profile_rating_operation">Was %1$s: %2$s</string>
    <string name="name_invalid">This name is invalid.</string>
    <string name="password_invalid">This password is invalid.</string>
    <string name="phone_invalid">This phone is invalid.</string>
    <string name="connection_error">Error connecting to server try later.</string>
    <string name="user_created">¡User Created!</string>
    <string name="invalid_credentials">Invalid data, try again.</string>
    <string name="welcome">¡Welcome!</string>
    <string name="email_password_invalid">Invalid email or/and password.</string>
    <string name="address_invalid">This address is invalid because it should be at least 8 characters and 128 characters maximum.</string>
    <string name="user_updated">¡User Updated!</string>
    <string name="data_updated">Data updated</string>
    <string name="payment_successful">¡Payment Successful!</string>
    <string name="collected_in_shoppingbag">¡Collected in the Shopping Bag!</string>
    <string name="successful_confirmation">¡Successful confirmation!</string>
    <string name="successful_creation">¡Successful Confirmation!</string>

</resources>
