<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/title_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/title_profile" />
        <item
            android:id="@+id/nav_publications"
            android:icon="@drawable/ic_menu_publications"
            android:title="@string/title_publications" />
        <item
            android:id="@+id/nav_shopping"
            android:icon="@drawable/ic_menu_shopping"
            android:title="@string/title_shopping" />
        <item
            android:id="@+id/nav_sales"
            android:icon="@drawable/ic_menu_sales"
            android:title="@string/title_sales" />
        <item
            android:id="@+id/nav_donations"
            android:icon="@drawable/ic_menu_donations"
            android:title="@string/title_donations" />
        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_menu_log_out"
            android:title="@string/title_log_out" />
    </group>
</menu>
