<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.idbc.ngchiseng.timepieceapp.PaymentActivity">

    <include layout="@layout/my_custom_back_toolbar" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        android:orientation="vertical"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/payment_card_text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:textSize="20sp"
                android:text="@string/credit_card"
                fontPath="fonts/MyriadPro-SemiboldCond.otf"/>

            <EditText
                android:id="@+id/payment_card_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/payment_card_text1"
                android:layout_alignStart="@+id/payment_card_text1"
                android:layout_marginEnd="10dp"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:hint="@string/credit_card_name"/>

            <EditText
                android:id="@+id/payment_card_number"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/payment_card_name"
                android:layout_alignStart="@+id/payment_card_name"
                android:layout_marginEnd="10dp"
                android:inputType="number"
                android:imeOptions="actionNext"
                android:hint="@string/credit_card_number"/>

            <EditText
                android:id="@+id/payment_card_expiration"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/payment_card_number"
                android:layout_alignStart="@+id/payment_card_number"
                android:layout_marginEnd="10dp"
                android:inputType="date"
                android:imeOptions="actionNext"
                android:hint="@string/credit_card_expiration"/>

            <EditText
                android:id="@+id/payment_card_cvv"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/payment_card_number"
                android:layout_alignEnd="@+id/payment_card_number"
                android:layout_marginStart="10dp"
                android:inputType="number"
                android:imeOptions="actionNext"
                android:hint="@string/credit_card_cvv"/>

            <TextView
                android:id="@+id/payment_card_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/payment_card_expiration"
                android:layout_alignStart="@id/payment_card_expiration"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:textSize="20sp"
                android:text="@string/cardholder_address"
                fontPath="fonts/MyriadPro-SemiboldCond.otf"/>

            <EditText
                android:id="@+id/payment_card_address"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/payment_card_text2"
                android:layout_alignStart="@+id/payment_card_text2"
                android:layout_marginEnd="10dp"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:hint="@string/address"/>

            <EditText
                android:id="@+id/payment_card_city"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/payment_card_address"
                android:layout_alignStart="@+id/payment_card_address"
                android:layout_marginEnd="10dp"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:hint="@string/city"/>

            <EditText
                android:id="@+id/payment_card_state"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/payment_card_city"
                android:layout_alignStart="@+id/payment_card_city"
                android:layout_marginEnd="10dp"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:hint="@string/state"/>

            <EditText
                android:id="@+id/payment_card_postal_code"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/payment_card_city"
                android:layout_alignEnd="@+id/payment_card_city"
                android:layout_marginStart="10dp"
                android:inputType="number"
                android:imeOptions="actionNext"
                android:hint="@string/postal_code"/>

            <AutoCompleteTextView
                android:id="@+id/payment_card_country"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/payment_card_state"
                android:layout_alignStart="@+id/payment_card_state"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="40dp"
                android:inputType="text"
                android:hint="@string/country">
            </AutoCompleteTextView>

            <TextView
                android:id="@+id/payment_card_total"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/barWhite"
                android:layout_below="@+id/payment_card_country"
                android:textAlignment="center" />

            <Button
                android:id="@+id/payment_card_btn"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/circle1"
                android:textAlignment="center"
                android:textColor="@color/barWhite"
                android:layout_below="@+id/payment_card_total"
                android:text="@string/shopping_pay"/>

        </RelativeLayout>

    </ScrollView>

</LinearLayout>
