<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_normal"
    tools:context="com.idbc.ngchiseng.timepieceapp.LoginActivity">


    <AutoCompleteTextView
        android:id="@+id/login_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/ic_email"
        android:imeOptions="actionNext"
        android:hint="@string/email"
        android:layout_below="@+id/login_msg"
        android:layout_centerHorizontal="true" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_password_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_email"
        android:layout_alignStart="@+id/login_email"
        android:layout_marginTop="15dp"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true">
    <EditText
        android:id="@+id/login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_lock"
        android:hint="@string/password"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="260dp"
        android:layout_height="45dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/btn_ppal"
        android:text="@string/login"
        android:layout_below="@+id/login_password_layout"
        android:layout_alignStart="@+id/login_signup" />

    <Button
        android:id="@+id/login_signup"
        android:layout_width="260dp"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:background="@drawable/btn_fb"
        android:text="@string/sign_up" />

    <TextView
        android:id="@+id/login_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:text="@string/forgot_password"
        android:layout_marginStart="15dp"
        android:layout_below="@+id/login_button"
        android:layout_alignParentStart="true" />

    <ProgressBar
        android:id="@+id/login_progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/login_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/login_progressBar"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="18dp"
        android:text="TextView"
        android:layout_alignBaseline="@+id/login_forgot"
        android:layout_alignBottom="@+id/login_forgot"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
