<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_register"
    tools:context="com.idbc.ngchiseng.timepieceapp.RegisterActivity">

    <EditText
        android:id="@+id/signup_name_complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="86dp"
        android:backgroundTint="@color/White"
        android:ems="10"
        android:hint="@string/name_complete"
        android:imeOptions="actionNext"
        android:inputType="textPersonName"
        android:textColor="@color/White"
        android:textColorHint="@color/White"
        android:layout_marginEnd="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/signup_password_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/White"
        android:layout_below="@+id/signup_name_complete"
        android:layout_alignStart="@+id/signup_name_complete">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/signup_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:backgroundTint="@color/White"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/White"
            android:textColorHint="@color/White" />
    </android.support.design.widget.TextInputLayout>

    <EditText
        android:id="@+id/signup_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:textColor="@color/White"
        android:textColorHint="@color/White"
        android:backgroundTint="@color/White"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:imeOptions="actionNext"
        android:layout_below="@+id/signup_password_layout"
        android:layout_alignStart="@+id/signup_password_layout" />

    <EditText
        android:id="@+id/signup_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:textColor="@color/White"
        android:textColorHint="@color/White"
        android:backgroundTint="@color/White"
        android:inputType="phone"
        android:hint="@string/phone"
        android:imeOptions="actionDone"
        android:layout_below="@+id/signup_email"
        android:layout_alignStart="@+id/signup_email" />

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="260dp"
        android:layout_height="45dp"
        android:textAlignment="center"
        android:background="@drawable/btn_ppal"
        android:textColor="@color/White"
        android:layout_marginTop="29dp"
        android:text="@string/sign_up"
        android:layout_below="@+id/signup_phone"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/user"
        android:layout_alignBottom="@+id/signup_name_complete"
        android:layout_toStartOf="@+id/signup_name_complete" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/password"
        android:layout_above="@+id/signup_email"
        android:layout_toStartOf="@+id/signup_password_layout" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/email"
        android:layout_alignBottom="@+id/signup_email"
        android:layout_toStartOf="@+id/signup_email" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/phone"
        android:layout_alignBottom="@+id/signup_phone"
        android:layout_toStartOf="@+id/signup_phone" />

    <ProgressBar
        android:id="@+id/signup_progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
